examples/test/testpolicy13851.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy13851
  namespace: namespace463
spec:
  podSelector:
    matchLabels:
      key7: value22
      key16: value45
      key40: value10
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key9: value12
      podSelector:
        matchLabels:
          key36: value5
